--- a/EtAlii.BinanceMagic.Service/Trading/Circular/CircularEdit.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Circular/CircularEdit.razor
@@ -13,114 +13,132 @@
             </CardHeader>
                 <CardBody>
 
-                    <Validation Validator="@ValidationRule.IsNotEmpty">
-                        <Field ColumnSize="ColumnSize.IsHalf.OnTablet.IsFull.OnMobile">
-                            <FieldLabel>Name</FieldLabel>
+                    <Field>
+                        <FieldLabel>Name</FieldLabel>
+                        <Validation Validator="@ValidationRule.IsNotEmpty">
                             <TextEdit 
                                 Placeholder="Enter name" 
                                 Autofocus="true"
                                 @bind-Text="@Model.Name">
-                                <FieldHelp>The name with which the trade should be identified.</FieldHelp>
                             </TextEdit>
-                            @* <FieldHelp>A name that represents the circular trade.</FieldHelp> *@
-                        </Field>
-                    </Validation>
-                    
-                    <Validation Validator="@ValidationRule.IsNotEmpty">
-                        <Field ColumnSize="ColumnSize.IsQuarter.OnTablet.IsHalf.OnMobile">
-                            <FieldLabel>First symbol</FieldLabel>
+                        </Validation>
+                        <FieldHelp>The name with which the trade should be identified.</FieldHelp>
+                    </Field>
+                
+                    <Field>
+                        <FieldLabel>First symbol</FieldLabel>
+                        <Validation Validator="@ValidationRule.IsNotEmpty">
                             <TextEdit 
                                 Placeholder="Symbol" 
-                                Autofocus="true"
                                 @bind-Text="@Model.FirstSymbol">
-                                <FieldHelp>The first symbol to use for the trade.</FieldHelp>
                             </TextEdit>
-                        </Field>
-                    </Validation>
-                    
-                    <Validation Validator="@ValidationRule.IsNotEmpty">
-                        <Field ColumnSize="ColumnSize.IsQuarter.OnTablet.IsHalf.OnMobile">
-                            <FieldLabel>Second symbol</FieldLabel>
+                        </Validation>
+                        <FieldHelp>The first symbol to use for the trade.</FieldHelp>
+                    </Field>
+                
+                    <Field>
+                        <FieldLabel>Second symbol</FieldLabel>
+                        <Validation Validator="@ValidationRule.IsNotEmpty">
                             <TextEdit 
                                 Placeholder="Symbol" 
-                                Autofocus="true"
                                 @bind-Text="@Model.SecondSymbol">
-                                <FieldHelp>The second symbol to use for the trade.</FieldHelp>
                             </TextEdit>
-                        </Field>
-                    </Validation>
+                        </Validation>
+                        <FieldHelp>The second symbol to use for the trade.</FieldHelp>
+                    </Field>
 
-                    <Validation Validator="@ValidationRule.None">
-                        <Field ColumnSize="ColumnSize.IsQuarter.OnTablet.IsHalf.OnMobile">
-                            <FieldLabel>Target increase</FieldLabel>
-                            <NumericEdit 
-                                Placeholder="Target increase in %" 
-                                Autofocus="true"
-                                @bind-Value="@TargetIncreaseInPercentage"
-                                Min="80"
-                                Max="150">
-                                <FieldHelp>The target increase that should be aimed for each cycle.</FieldHelp>
-                            </NumericEdit>
-                        </Field>
-                    </Validation>
+                    <Field>
+                        <FieldLabel>Target increase</FieldLabel>
+                        <Validation Validator="@ValidationRule.None">
+                            <Addons>
+                                <Addon AddonType="AddonType.Body">
+                                    <NumericEdit 
+                                        Placeholder="Target increase in %" 
+                                        @bind-Value="@TargetIncreaseInPercentage"
+                                        Min="80"
+                                        Max="150">
+                                    </NumericEdit>
+                                </Addon>
+                                <Addon AddonType="AddonType.End">
+                                    <AddonLabel>%</AddonLabel>
+                                </Addon>
+                            </Addons>
+                        </Validation>
+                        <FieldHelp>The target increase that should be aimed for each cycle.</FieldHelp>
+                    </Field>
 
-                    <Validation Validator="@ValidationRule.None">
-                        <Field ColumnSize="ColumnSize.IsQuarter.OnTablet.IsHalf.OnMobile">
-                            <FieldLabel>Initial sell factor</FieldLabel>
-                            <NumericEdit 
-                                Placeholder="Initial sell factor in %" 
-                                Autofocus="true"
-                                @bind-Value="@InitialSellFactorInPercentage"
-                                Min="50"
-                                Max="150">
-                                <FieldHelp>The initial sell factor that will  be used to run the first cycle with.
-                                </FieldHelp>
-                            </NumericEdit>
-                        </Field>
-                    </Validation>
+                    <Field>
+                        <FieldLabel>Initial sell factor</FieldLabel>
+                        <Validation Validator="@ValidationRule.None">
+                            <Addons>
+                                <Addon AddonType="AddonType.Body">
+                                    <NumericEdit 
+                                        Placeholder="Initial sell factor in %" 
+                                        @bind-Value="@InitialSellFactorInPercentage"
+                                        Min="50"
+                                        Max="150">
+                                    </NumericEdit>
+                                </Addon>
+                                <Addon AddonType="AddonType.End">
+                                    <AddonLabel>%</AddonLabel>
+                                </Addon>
+                            </Addons>
+                        </Validation>
+                        <FieldHelp>The initial sell factor that will  be used to run the first cycle with.</FieldHelp>
+                    </Field>
 
-                    <Validation Validator="@ValidationRule.None">
-                        <Field ColumnSize="ColumnSize.IsQuarter.OnTablet.IsHalf.OnMobile">
-                            <FieldLabel>Max quantity to trade</FieldLabel>
-                            <NumericEdit 
-                                Placeholder="Max quantity to trade in %" 
-                                Autofocus="true"
-                                @bind-Value="@MaxQuantityToTradeInPercentage"
-                                Min="50"
-                                Max="100">
-                                <FieldHelp>The maximum percentage of the previous purchase to trade with in the next cycle.
-                                </FieldHelp>
-                            </NumericEdit>
-                        </Field>
-                    </Validation>
+                    <Field>
+                        <FieldLabel>Max quantity to trade</FieldLabel>
+                        <Validation Validator="@ValidationRule.None">
+                            <Addons>
+                                <Addon AddonType="AddonType.Body">
+                                    <NumericEdit 
+                                        Placeholder="Max quantity to trade in %" 
+                                        @bind-Value="@MaxQuantityToTradeInPercentage"
+                                        Min="50"
+                                        Max="100">
+                                    </NumericEdit>
+                                <Addon AddonType="AddonType.End">
+                                    <AddonLabel>%</AddonLabel>
+                                </Addon>
+                                </Addon>
+                            </Addons>
+                        </Validation>
+                        <FieldHelp>The maximum percentage of the previous purchase to trade with in the next cycle.</FieldHelp>
+                    </Field>
 
-                    <Validation Validator="@ValidationRule.None">
-                        <Field ColumnSize="ColumnSize.IsQuarter.OnTablet.IsHalf.OnMobile">
-                            <FieldLabel>Notional minimal correction</FieldLabel>
-                            <NumericEdit 
-                                Placeholder="Notional minimal correction %"
-                                Autofocus="true"
-                                @bind-Value="@NotionalMinCorrectionInPercentage"
-                                Min="100"
-                                Max="150">
-                                <FieldHelp>The percentage correction to ensure trades stay above the notional minimum value to be traded.
-                                </FieldHelp>
-                            </NumericEdit>
-                        </Field>
-                    </Validation>
-                    
-                    <Validation Validator="@ValidationRule.None">
-                        <Field ColumnSize="ColumnSize.IsHalf.OnTablet.IsHalf.OnMobile">
-                            <FieldLabel>Connectivity</FieldLabel>
+                    <Field>
+                        <FieldLabel>Notional minimal correction</FieldLabel>
+                        <Validation Validator="@ValidationRule.None">
+                            <Addons>
+                                <Addon AddonType="AddonType.Body">
+                                    <NumericEdit 
+                                        Placeholder="Notional minimal correction %"
+                                        @bind-Value="@NotionalMinCorrectionInPercentage"
+                                        Min="100"
+                                        Max="150">
+                                    </NumericEdit>
+                                </Addon>
+                                <Addon AddonType="AddonType.End">
+                                    <AddonLabel>%</AddonLabel>
+                                </Addon>
+                            </Addons>
+                        </Validation>
+                        <FieldHelp>The percentage correction to ensure trades stay above the notional minimum value to be traded.</FieldHelp>
+                    </Field>
+
+                    <Field>
+                        <FieldLabel>Connectivity</FieldLabel>
+                        <Validation Validator="@ValidationRule.None">
                             <RadioGroup TValue="Connectivity" @bind-CheckedValue="@Model.Connectivity" Orientation="Orientation.Vertical">
                                 <Radio TValue="Connectivity" Value="@(Connectivity.BackTest)">Backtest</Radio>
                                 <Radio TValue="Connectivity" Value="@(Connectivity.Binance)">Interact with Binance</Radio>
                                 <Radio TValue="Connectivity" Value="@(Connectivity.Test)">Test calls to Binance</Radio>
                             </RadioGroup>
-                        </Field>
-                    </Validation>
+                        </Validation>
+                    </Field>
                     
-                    <Field ColumnSize="ColumnSize.IsHalf.OnTablet.IsHalf.OnMobile">
+                    <Field>
                         <Button Color="Color.Primary" Clicked="@Submit">Save</Button>
                     </Field>
                 </CardBody>
