--- a/EtAlii.BinanceMagic.Service/Trading/Circular/CircularEdit.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Circular/CircularEdit.razor
@@ -4,7 +4,7 @@
 
 @inherits EditBase<CircularTrading> 
 
-<Validations @ref="Validations" Mode="ValidationMode.Auto" ValidateOnLoad="false" EditContext="@EditContext">
+<Validations @ref="Validations" Mode="ValidationMode.Auto" ValidateOnLoad="false" EditContext="@EditContext" StatusChanged="OnValidationChanged">
 <Row>
     <Column ColumnSize="ColumnSize.IsFull.OnMobile.IsHalf.OnTablet">
         <Card Margin="Margin.Is4">
@@ -13,84 +13,82 @@
             </CardHeader>
                 <CardBody>
 
-                    <Field>
-                        <FieldLabel>Name</FieldLabel>
-                        <Validation Validator="@ValidationRule.IsNotEmpty">
+                    <Validation Validator="@ValidationRule.IsNotEmpty">
+                        <Field>
+                            <FieldLabel>Name</FieldLabel>
                             <TextEdit 
                                 Placeholder="Enter name" 
                                 Autofocus="true"
                                 @bind-Text="@Model.Name">
                             </TextEdit>
-                        </Validation>
-                        <FieldHelp>The name with which the trade should be identified.</FieldHelp>
-                    </Field>
+                            <FieldHelp>The name with which the trade should be identified.</FieldHelp>
+                        </Field>
+                    </Validation>
                 
                     <Field>
                         <FieldLabel>First symbol</FieldLabel>
-                        <Validation Validator="@ValidationRule.IsNotEmpty">
-                            <TextEdit 
-                                Placeholder="Symbol" 
-                                @bind-Text="@Model.FirstSymbol">
-                            </TextEdit>
-                        </Validation>
+                        <SymbolTextEdit
+                            @bind-SelectedValue="@Model.FirstSymbol"
+                            Placeholder="Symbol"/>
                         <FieldHelp>The first symbol to use for the trade.</FieldHelp>
                     </Field>
                 
                     <Field>
                         <FieldLabel>Second symbol</FieldLabel>
-                        <Validation Validator="@ValidationRule.IsNotEmpty">
-                            <TextEdit 
-                                Placeholder="Symbol" 
-                                @bind-Text="@Model.SecondSymbol">
-                            </TextEdit>
-                        </Validation>
+                        <SymbolTextEdit
+                            @bind-SelectedValue="@Model.SecondSymbol"
+                            Placeholder="Symbol"/>
                         <FieldHelp>The second symbol to use for the trade.</FieldHelp>
                     </Field>
 
-                    <Field>
-                        <FieldLabel>Target increase</FieldLabel>
-                        <Validation Validator="@ValidationRule.None">
+                    <Validation Validator="@(e => IsBetweenInclusive(e, 80, 150))">
+                        <Field>
+                            <FieldLabel>Target increase</FieldLabel>
                             <Addons>
+                                <Addon AddonType="AddonType.Start">
+                                    <AddonLabel>%</AddonLabel>
+                                </Addon>
                                 <Addon AddonType="AddonType.Body">
-                                    <NumericEdit 
+                                    <NumericEdit
+                                        TValue="decimal"
                                         Placeholder="Target increase in %" 
                                         @bind-Value="@TargetIncreaseInPercentage"
                                         Min="80"
                                         Max="150">
                                     </NumericEdit>
                                 </Addon>
-                                <Addon AddonType="AddonType.End">
+                            </Addons>
+                            <FieldHelp>The target increase that should be aimed for each cycle.</FieldHelp>
+                        </Field>
+                    </Validation>
+
+                    <Validation Validator="@(e => IsBetweenInclusive(e, 50, 150))">
+                        <Field>
+                            <FieldLabel>Initial sell factor</FieldLabel>
+                            <Addons>
+                                <Addon AddonType="AddonType.Start">
                                     <AddonLabel>%</AddonLabel>
                                 </Addon>
-                            </Addons>
-                        </Validation>
-                        <FieldHelp>The target increase that should be aimed for each cycle.</FieldHelp>
-                    </Field>
-
-                    <Field>
-                        <FieldLabel>Initial sell factor</FieldLabel>
-                        <Validation Validator="@ValidationRule.None">
-                            <Addons>
                                 <Addon AddonType="AddonType.Body">
                                     <NumericEdit 
                                         Placeholder="Initial sell factor in %" 
                                         @bind-Value="@InitialSellFactorInPercentage"
-                                        Min="50"
-                                        Max="150">
+                                        Min="50m"
+                                        Max="150m">
                                     </NumericEdit>
                                 </Addon>
-                                <Addon AddonType="AddonType.End">
+                            </Addons>
+                            <FieldHelp>The initial sell factor that will  be used to run the first cycle with.</FieldHelp>
+                        </Field>
+                    </Validation>
+
+                    <Validation Validator="@(e => IsBetweenInclusive(e, 50, 100))">
+                        <Field>
+                            <FieldLabel>Max quantity to trade</FieldLabel>
+                            <Addons>
+                                <Addon AddonType="AddonType.Start">
                                     <AddonLabel>%</AddonLabel>
                                 </Addon>
-                            </Addons>
-                        </Validation>
-                        <FieldHelp>The initial sell factor that will  be used to run the first cycle with.</FieldHelp>
-                    </Field>
-
-                    <Field>
-                        <FieldLabel>Max quantity to trade</FieldLabel>
-                        <Validation Validator="@ValidationRule.None">
-                            <Addons>
                                 <Addon AddonType="AddonType.Body">
                                     <NumericEdit 
                                         Placeholder="Max quantity to trade in %" 
@@ -98,19 +96,19 @@
                                         Min="50"
                                         Max="100">
                                     </NumericEdit>
-                                <Addon AddonType="AddonType.End">
-                                    <AddonLabel>%</AddonLabel>
-                                </Addon>
                                 </Addon>
                             </Addons>
-                        </Validation>
-                        <FieldHelp>The maximum percentage of the previous purchase to trade with in the next cycle.</FieldHelp>
-                    </Field>
+                            <FieldHelp>The maximum percentage of the previous purchase to trade with in the next cycle.</FieldHelp>
+                        </Field>
+                    </Validation>
 
-                    <Field>
-                        <FieldLabel>Notional minimal correction</FieldLabel>
-                        <Validation Validator="@ValidationRule.None">
+                    <Validation Validator="@(e => IsBetweenInclusive(e, 100, 150))">
+                        <Field>
+                            <FieldLabel>Notional minimal correction</FieldLabel>
                             <Addons>
+                                <Addon AddonType="AddonType.Start">
+                                    <AddonLabel>%</AddonLabel>
+                                </Addon>
                                 <Addon AddonType="AddonType.Body">
                                     <NumericEdit 
                                         Placeholder="Notional minimal correction %"
@@ -119,28 +117,23 @@
                                         Max="150">
                                     </NumericEdit>
                                 </Addon>
-                                <Addon AddonType="AddonType.End">
-                                    <AddonLabel>%</AddonLabel>
-                                </Addon>
                             </Addons>
-                        </Validation>
-                        <FieldHelp>The percentage correction to ensure trades stay above the notional minimum value to be traded.</FieldHelp>
-                    </Field>
+                            <FieldHelp>The percentage correction to ensure trades stay above the notional minimum value to be traded.</FieldHelp>
+                        </Field>
+                    </Validation>
 
-                    <Field>
-                        <FieldLabel>Connectivity</FieldLabel>
-                        <Validation Validator="@ValidationRule.None">
-                            <RadioGroup TValue="Connectivity" @bind-CheckedValue="@Model.Connectivity" Orientation="Orientation.Vertical">
-                                <Radio TValue="Connectivity" Value="@(Connectivity.BackTest)">Backtest</Radio>
-                                <Radio TValue="Connectivity" Value="@(Connectivity.Binance)">Interact with Binance</Radio>
-                                <Radio TValue="Connectivity" Value="@(Connectivity.Test)">Test calls to Binance</Radio>
-                            </RadioGroup>
-                        </Validation>
-                    </Field>
+                    <Validation Validator="@ValidationRule.None">
+                        <Field>
+                            <FieldLabel>Connectivity</FieldLabel>
+                                <RadioGroup TValue="Connectivity" @bind-CheckedValue="@Model.Connectivity" Orientation="Orientation.Vertical">
+                                    <Radio TValue="Connectivity" Value="@(Connectivity.BackTest)">Backtest</Radio>
+                                    <Radio TValue="Connectivity" Value="@(Connectivity.Binance)">Interact with Binance</Radio>
+                                    <Radio TValue="Connectivity" Value="@(Connectivity.Test)">Test calls to Binance</Radio>
+                                </RadioGroup>
+                        </Field>
+                    </Validation>
                     
-                    <Field>
-                        <Button Color="Color.Primary" Clicked="@Submit">Save</Button>
-                    </Field>
+                    <Button Color="Color.Primary" Clicked="@Submit" disabled=@IsInvalid>Save</Button>
                 </CardBody>
             </Card>
         </Column>
