--- a/EtAlii.BinanceMagic.Service/Trading/Circular/CircularList.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Circular/CircularList.razor
@@ -13,7 +13,7 @@
         <ListGroupItem Clicked="@(() => OnTradingSelected(context.Trading.Id))">
             <div class="d-flex w-100 justify-content-between">
                 <h5 class="mb-1">@context.Trading.Name</h5>
-                <small>@context.Trading.Connectivity</small>
+                <small>@context.Trading.TradeMethod</small>
             </div>
                 <Paragraph>Stuff goes here.</Paragraph>            
         </ListGroupItem>
