--- a/EtAlii.BinanceMagic.Service/Trading/Experimental/ExperimentalList.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Experimental/ExperimentalList.razor
@@ -2,7 +2,7 @@
 
 @namespace EtAlii.BinanceMagic.Service
 
-@inherits ListBase<ExperimentalTrading>
+@inherits ListBase<ExperimentalTradeDetailsSnapshot, ExperimentalTrading>
 
 <Heading Margin="Margin.Is4">
     <Icon IconName="@("fa-flask")"/> Experimental tradings
@@ -10,8 +10,8 @@
 
 <ListGroup Margin="Margin.Is4">
     <Repeater Items="@Tradings">
-    <ListGroupItem Clicked="@(() => OnTradingSelected(context.Trading.Id))">
-        @context.Trading.Name
+    <ListGroupItem Clicked="@(() => OnTradingSelected(context.Context.Trading.Id))">
+        @context.Context.Trading.Name
     </ListGroupItem>
     </Repeater>
 </ListGroup>
