--- a/EtAlii.BinanceMagic.Service/Trading/OneOff/OneOffView.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/OneOff/OneOffView.razor
@@ -2,7 +2,7 @@
 
 @namespace EtAlii.BinanceMagic.Service
 
-@inherits ViewBase<OneOffTrading, OneOffAlgorithmRunner>
+@inherits ViewBase<object, OneOffTrading, OneOffAlgorithmRunner>
 
 <Row Margin="Margin.Is4">
     <Column ColumnSize="ColumnSize.Is1">
