Corrected github icon

--- a/EtAlii.BinanceMagic.Service/Shared/MainLayout.razor
+++ b/EtAlii.BinanceMagic.Service/Shared/MainLayout.razor
@@ -23,7 +23,7 @@
                 <BarEnd>
                     <BarItem>
                         <BarLink To="https://github.com/vrenken/EtAlii.BinanceMagic">
-                            <BarIcon IconName="@("fab fa-github")"/>
+                            <BarIcon IconName="@("fab fa-github")" Style="color:white"/>
                         </BarLink>
                     </BarItem>
                 </BarEnd>
